# Geant4-positron-annihilation

./: .gitignore  CMakeLists.txt  README.md  detector_geometry.mac  generate_detector_geometry_files.py  positron_annihilation_13B_DH.cc  run.mac  run1.mac  run_macros.sh
include/: ActionInitialisation.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  HistogramIDs.hh  MyVerboseMessenger.hh  OutputFileMessenger.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  Stats.hh  SteppingAction.hh  TrackInformation.hh  TrackingAction.hh
src/: ActionInitialisation.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  OutputFileMessenger.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  Stats.cc  SteppingAction.cc  TrackingAction.cc
src/legacy/: PrimaryGeneratorActionXiaoBin.cc
